@@ -2,6 +2,7 @@ Version Next
 
     - Allow bucket names with "subdirectory" for prefix (issue #130)
     - Added `--configFile' flag (issue #129)
+    - Added `--accessKeyEnv' flag (issue #128)
 
 Version 1.5.5 released August 22, 2020
 
